--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "e2e": "playwright test",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -67,6 +68,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+      "@playwright/test": "^1.40.0",
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.16.5",
