--- a/package.json
+++ b/package.json
@@ -62,14 +62,15 @@
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.4",
     "sonner": "^1.7.4",
+    "supabase": "^2.67.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
     "zod": "^3.25.76"
   },
   "devDependencies": {
-      "@playwright/test": "^1.40.0",
     "@eslint/js": "^9.32.0",
+    "@playwright/test": "^1.40.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
